--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Maker</title>
+    <link rel="stylesheet" href="..\static/style.css">
+    <style>
+        * {
+            padding: 0px;
+            margin: 0px;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        }
+
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        #personal_information {
+            justify-content: center;
+            align-items: center;
+            margin-top: 50px;
+        }
+
+        #section1 {
+            padding: 20px;
+            display: flex;
+            border: 2px solid black;
+            width: 400px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 50px;
+        }
+
+        #full_name input {
+            margin-bottom: 10px;
+            padding: 10px;
+            width: 80%;
+        }
+
+        #submit1 {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+            width: 80%;
+        }
+
+        #submit1:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
+
 <body>
-    <section>
-        <h1>personal information</h1>
-        <form action="" method="POST">
-            <div>
-                <input type="text" name="first_name" id="" placeholder="Enter First name">
-                <input type="text" name="Last_name" id="" placeholder="Enter Last name">
+    <section id="section1">
+        <h1>Personal Information</h1>
+        <form action="/adding" method="POST" id="personal_information">
+            <div id="full_name">
+                <input type="text" name="first_name" id="first_name" placeholder="Enter First name" required>
+                <input type="text" name="last_name" id="last_name" placeholder="Enter Last name" required>
+                <input type="tel" name="mobile_number" id="mobile_number" required maxlength="10" minlength="10" placeholder="Enter your phone phone_number">  
+                <input type="email" name="email" id="email" placeholder="Enter your email" required>      
+                <input type="text" name="alinkedin" id="alinkedin" maxlength="10" minlength="5" placeholder="Enter name for linkedin"> 
+                <input type="url" name="linkdin" id="linkdin" placeholder="Enter linkedin url">      
+                {% if msg %}
+                <p style="color: red;">{{msg}}</p>
+                {% endif %}
+                <input type="text" name="agithub" id="agithub" maxlength="10" minlength="5" placeholder="Enter name for github"> 
+                <input type="url" name="github" id="github" placeholder="Enter github url">
+                {% if msg1 %}
+                <p style="color: red;">{{msg1}}</p>
+                {% endif %}
+                <input name="summary" id="summary" >
+                <input type="submit" value="Next" id="submit1" placeholder="Enter linkedin url">
+                
+
             </div>
         </form>
-
     </section>
-    
 </body>
+
 </html>
