upto summary is completed

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
                 {% if msg1 %}
                 <p style="color: red;">{{msg1}}</p>
                 {% endif %}
-                <input name="summary" id="summary" >
+                <textarea name="summary" id="summary" placeholder="Enter some summary about your self"></textarea>
                 <input type="submit" value="Next" id="submit1" placeholder="Enter linkedin url">
                 
 
