--- a/templates/resume_template.html
+++ b/templates/resume_template.html
@@ -39,14 +39,14 @@
             margin-top: 20px;
         }
         h2 {
-            border-bottom: 1px solid black;
+            /* border-bottom: 1px solid black;
             padding-bottom: 5px;
             font-size: 20px;
-            margin-left: -3px;
-            /* border: 1px solid black;
+            margin-left: -3px; */
+            border: 1px solid black;
             text-align: center  ;
             background-color: rgb(225, 206, 177);
-            border-radius: 5px; */
+            border-radius: 5px;
         }
         #summary p {
             text-align: justify;
@@ -103,7 +103,7 @@
         <ul id="contact_information">
             <li>+91 96520 48406</li>
             <li><a href="mailto:tsrreddy815@gmail.com">tsrreddy815@gmail.com</a></li>
-            <li><a href="https://www.linkedin.com/in/your-profile">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/tallapureddy-abhiramreddy">LinkedIn</a></li>
             <li><a href="https://www.github.com/Abhiram0620">GitHub</a></li>
         </ul>
     </header>
